--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,14 @@
+# Node.js dependencies
 node_modules/
+
+# Environment variables
 .env
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Optional: OS or IDE files
+.DS_Store
+.vscode/
